--- a/css/404-page-style.css
+++ b/css/404-page-style.css
@@ -5,6 +5,8 @@
 
 html,
 body{
+    overflow-x: hidden;
+    max-width: 100%;
     background-image: url('../images/website-imgs/404\ page\ 3\ –\ 1@2x.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -105,6 +107,7 @@ body{
     font-family: 'Segoe UI';
     font-size: 27px;
     font-weight: bold;
+    background: transparent;
 }
 footer{
     widows: 100%;
