--- a/css/e-visa-style.css
+++ b/css/e-visa-style.css
@@ -4,6 +4,8 @@
 }
 
 body{
+    overflow-x: hidden;
+    max-width: 100%;
     position: relative;
     background-image: url('../images/eVisa-background.png') ;
 }
