--- a/css/404-page-2-style.css
+++ b/css/404-page-2-style.css
@@ -4,14 +4,17 @@
 }
 
 html,
-.body{
+body{
     overflow-x: hidden;
     max-width: 100%;
-    background-image: url('../images/website-imgs/header-background.png');
+    background-image: url('../images/website-imgs/404\ Page\ 1\ –\ 1@2x.png');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
-
+.body{
+    background-image: url('../images/website-imgs/404\ Page\ 2\ –\ 1@2x.png')
+}
 .bg-light{
     padding-left: 7rem;
     padding-right: 7rem;
@@ -138,7 +141,7 @@ footer{
     margin-left: 6rem;
 }
 .footer-item{
-    padding-left: 1%;
+    padding-left: 1rem;
     flex: 0 0 25%
 }
 a.footer-link{
@@ -147,4 +150,76 @@ a.footer-link{
     font-family: 'Segoe UI';
     font-weight: 400;
 }
+@media only screen and (max-width: 1024px){
+    .footer-item {
+        flex: 0 0 40%;
+    }
+}
+@media only screen and (max-width:747px) {
+    a.footer-link{
+        font-size: 18px;
+    }
+    .footer-nav{
+        margin-left: 0%;
+        text-align: center;
+    }
+    .footer-item{
+        flex: 0 0 50%;
+    }
+    .col-md-5.copyright > p{
+        float: left;
+        padding-left: 10%;
+    }
+}
+
+@media only screen and (max-width: 425px){
+    a.footer-link{
+        font-size: 18px;
+    }
+    .footer-nav{
+        margin-left: 0%;
+    }
+    .footer-item{
+        flex: 0 0 52%;
+    }
+    .signup-btns> button.register{
+        font-size: 14px;
+        width: 100px;
+    }
+    .signup-btns> button.login{
+        font-size: 14px;
+    }
+    .col-md-6.error-image {
+        padding: 4% 1%;
+    }
+    .error-image > img {
+        width: 140px;
+        height: 180px;
+        padding-top: 30px;
+    }
+    .error-image p {
+        font-size: 140px;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .footer-item {
+        flex: 0 0 50%;
+    }
+    .footer-nav{
+        margin-left: 0%;
+    }
+    .col-md-6.error-image{
+        padding: 4% 0%;
+    }
+    .signup-btns> button.register{
+        font-size: 22px;
+        width: 165px;
+    }
+    .signup-btns> button.login{
+        font-size: 22px;
+        width: 90px;
+    }
+}
+
 
