--- a/css/404-page-style.css
+++ b/css/404-page-style.css
@@ -109,9 +109,6 @@ body{
     font-weight: bold;
     background: transparent;
 }
-footer{
-    widows: 100%;
-}
 
 .footer-menu .footer-nav .footer-item.footer-link > a{
     font-family: 'Segoe UI';
@@ -136,7 +133,7 @@ footer{
     margin-left: 6rem;
 }
 .footer-item{
-    padding-left: 1%;
+    padding-left: 1rem;
     flex: 0 0 25%
 }
 a.footer-link{
@@ -145,4 +142,72 @@ a.footer-link{
     font-family: 'Segoe UI';
     font-weight: 400;
 }
+
+@media only screen and (max-width: 1024px){
+    .footer-item {
+        flex: 0 0 40%;
+    }
+}
+@media only screen and (max-width:747px) {
+    a.footer-link{
+        font-size: 18px;
+    }
+    .footer-nav{
+        margin-left: 0%;
+        text-align: center;
+    }
+    .footer-item{
+        flex: 0 0 50%;
+    }
+    .col-md-5.copyright > p{
+        float: left;
+        padding-left: 10%;
+    }
+}
+
+@media only screen and (max-width: 425px){
+    a.footer-link{
+        font-size: 18px;
+    }
+    .footer-nav{
+        margin-left: 0%;
+    }
+    .footer-item{
+        flex: 0 0 52%;
+    }
+    .signup-btns> button.register{
+        font-size: 14px;
+        width: 100px;
+    }
+    .signup-btns> button.login{
+        font-size: 14px;
+    }
+    .col-md-6.error-image {
+        padding: 4% 1%;
+    }
+    .error-image > img {
+        width: 140px;
+        height: 180px;
+        padding-top: 30px;
+    }
+    .error-image p {
+        font-size: 140px;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .footer-item {
+        flex: 0 0 50%;
+    }
+    .footer-nav{
+        margin-left: 0%;
+    }
+    .col-md-6.error-image{
+        padding: 4% 0%;
+    }
+}
+
+
+
+
 
