--- a/css/e-visa-style.css
+++ b/css/e-visa-style.css
@@ -8,6 +8,9 @@ body{
     max-width: 100%;
     position: relative;
     background-image: url('../images/eVisa-background.png') ;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header-content{
